--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>라테일 이루 퀴즈 정답집</title>
+    <title>라테일 퀴즈 정답집</title>
     <style>
         html, body {
             margin: 0;
