--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 </head>
 <body>
     <header>
-        <h1>라테일 이루 퀴즈 정답집</h1>
+        <h1>라테일 퀴즈 정답집</h1>
     </header>
     <div class="container">
         <div class="toggle-btn">
