--- a/index.html
+++ b/index.html
@@ -145,8 +145,21 @@
             document.body.classList.toggle("dark");
         }
     </script>
+
+<style>
+* {
+  user-select: none;
+  -webkit-user-select: none; /* iOS Safari */
+  -moz-user-select: none;    /* Firefox */
+  -ms-user-select: none;     /* IE10+ */
+}
+body {
+  -webkit-touch-callout: none; /* iOS Safari */
+}
+</style>
+
 </head>
-<body ondragstart="return false" onselectstart="return false">
+<body ondragstart="return false" onselectstart="return false" ontouchstart="return false;" onselectstart="return false;">
 <header>
 <h1>라테일 퀴즈 족보 by 이루</h1>
 </header>
@@ -172,5 +185,40 @@
     }
   });
 </script>
+
+<script>
+// Disable right-click
+document.addEventListener('contextmenu', event => event.preventDefault());
+
+// Disable key combos (F12, Ctrl+Shift+I, etc.)
+document.addEventListener('keydown', function (e) {
+  if (
+    e.key === 'F12' ||
+    (e.ctrlKey && e.shiftKey && e.key === 'I') ||
+    (e.ctrlKey && e.shiftKey && e.key === 'J') ||
+    (e.ctrlKey && e.key === 'U')
+  ) {
+    e.preventDefault();
+    alert("이 기능은 사용할 수 없습니다.");
+  }
+});
+
+// Disable text selection
+document.addEventListener('DOMContentLoaded', () => {
+  document.body.style.userSelect = "none";
+});
+
+// Detect devtools with debugger delay
+setInterval(() => {
+  const before = new Date();
+  debugger;
+  const after = new Date();
+  if (after - before > 100) {
+    alert("개발자 도구 사용이 감지되었습니다.");
+    location.reload();
+  }
+}, 1000);
+</script>
+
 </body>
 </html>
