--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ body *:not(input):not(textarea) {
 </header>
 <div class="container">
 <div class="toggle-btn">
-<button onclick="toggleDarkMode()">🌙 다크모드 전환</button>
+<button onclick="toggleDarkMode()">다크모드 전환</button>
 </div>
 <div class="search-box">
 <input id="searchInput" onkeyup="filterQuestions()" placeholder="문제 제목이나 보기 중 일부를 입력하세요 (예: 머리감을 목)" type="text"/>
